# webapi/docs/swagger.json
@@ -116,26 +116,7 @@
                 }
             }
         },
-        "/characters": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Character"
-                ],
-                "summary": "get all user characters",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/character{id}": {
+        "/character/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -158,7 +139,35 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Character"
+                        }
+                    }
+                }
+            }
+        },
+        "/characters": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Character"
+                ],
+                "summary": "get all user characters",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Character"
+                            }
+                        }
                     }
                 }
             }
@@ -196,6 +205,25 @@
                 }
             }
         },
+        "/logout": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logout user",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "consumes": [
@@ -229,12 +257,26 @@
     },
     "definitions": {
         "models.AddCharacter": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "ability": {
+                    "type": "string"
+                },
+                "damage": {
+                    "type": "number"
+                },
+                "maxHealth": {
+                    "type": "number"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
         },
         "models.AddUser": {
             "type": "object",
             "properties": {
-                "name": {
+                "login": {
                     "type": "string"
                 },
                 "password": {
@@ -250,6 +292,9 @@
                 },
                 "damage": {
                     "type": "number"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "maxHealth": {
                     "type": "number"
@@ -274,7 +319,24 @@
             }
         },
         "models.UpdateCharacter": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "ability": {
+                    "type": "string"
+                },
+                "damage": {
+                    "type": "number"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "maxHealth": {
+                    "type": "number"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
         },
         "models.User": {
             "type": "object",
@@ -285,7 +347,7 @@
                         "$ref": "#/definitions/models.Character"
                     }
                 },
-                "name": {
+                "login": {
                     "type": "string"
                 }
             }
