# webapi/models/character.go
@@ -1,6 +1,7 @@
 package models
 
 type Character struct {
+	Id        uint32
 	Name      string
 	MaxHealth float32
 	Damage    float32
@@ -9,7 +10,16 @@ type Character struct {
 }
 
 type UpdateCharacter struct {
+	Id        uint32
+	Name      string
+	MaxHealth float32
+	Damage    float32
+	Ability   string
 }
 
 type AddCharacter struct {
+	Name      string
+	MaxHealth float32
+	Damage    float32
+	Ability   string
 }
